terraform_pre-prod/main-manifests/Ingress-Cert-DNS/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prod-cluster
  name: nginx-2048-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: alb
  rules:
    - host: test4pp.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 4200
  tls:
    - hosts:
        - test4pp.tech
      secretName:  letsencrypt-staging
